# Rent-Tracker

./: .gitignore  CLAUDE.md  config.py  pyproject.toml  requirements.txt
app/: __init__.py  cli.py  models.py  utils.py
app/auth/: __init__.py  routes.py
app/dashboard/: routes.py
app/emails/: routes.py  scheduler.py  sender.py
app/payments/: __init__.py  allocator.py  csv_parser.py  forms.py  matcher.py  routes.py
app/settings/: forms.py  routes.py
app/static/css/: custom.css
app/templates/: base.html
app/templates/auth/: login.html
app/templates/dashboard/: index.html
app/templates/emails/: history.html
app/templates/errors/: 404.html  500.html
app/templates/payments/: review.html  upload.html
app/templates/settings/: index.html
app/templates/tenants/: add.html  deactivate.html  detail.html  edit.html
app/tenants/: __init__.py  forms.py  logic.py  routes.py
tests/: test_late_fee.py
